Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
-    <title>Simplevhost by ricardov03</title>
+    <title>simpleVhost by ricardov03</title>
 
     <link rel="stylesheet" href="stylesheets/styles.css">
     <link rel="stylesheet" href="stylesheets/github-light.css">
@@ -15,8 +15,8 @@
   <body>
     <div class="wrapper">
       <header>
-        <h1>Simplevhost</h1>
-        <p>This script allow users to administer Apache Virtual Host in a Friendly way.</p>
+        <h1>simpleVhost</h1>
+        <p>This script allow users to administer Apache Virtual Host in a FRIENDLY way.</p>
 
         <p class="view"><a href="https://github.com/ricardov03/simpleVhost">View the Project on GitHub <small>ricardov03/simpleVhost</small></a></p>
 
